[gd_scene load_steps=24 format=4 uid="uid://dh03xvg5bxx10"]

[ext_resource type="Script" path="res://game/main_menu.gd" id="1_jfk4f"]
[ext_resource type="TileSet" uid="uid://bpqj3wfubuunh" path="res://assets/town_tileset.tres" id="1_wwh8w"]
[ext_resource type="Shader" path="res://shaders/haunt-outline.gdshader" id="2_iph0b"]
[ext_resource type="Texture2D" uid="uid://fn7hcj6iq0jh" path="res://shaders/color_gradient_texture_1d.tres" id="3_dljhw"]
[ext_resource type="Texture2D" uid="uid://caqsdsty08tfr" path="res://shaders/vertical_gradient_texture_1d.tres" id="4_0b67m"]
[ext_resource type="SpriteFrames" uid="uid://cf34llq4pi0wr" path="res://characters/timmy.tres" id="5_30sbh"]
[ext_resource type="Texture2D" uid="uid://dkhf6dmj162yq" path="res://assets/made/ghost.png" id="6_juew3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gjqde"]
shader = ExtResource("2_iph0b")
shader_parameter/size_effect = 12.0
shader_parameter/speed = 1.2
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = true
shader_parameter/is_horizontal = false
shader_parameter/pause_duration = 0.2
shader_parameter/texture_size = Vector2(16, 16)
shader_parameter/onoff = false
shader_parameter/vertical_gradient = ExtResource("4_0b67m")
shader_parameter/color_gradient = ExtResource("3_dljhw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nk4i7"]
shader = ExtResource("2_iph0b")
shader_parameter/size_effect = 12.0
shader_parameter/speed = 1.2
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = true
shader_parameter/is_horizontal = false
shader_parameter/pause_duration = 0.2
shader_parameter/texture_size = Vector2(16, 16)
shader_parameter/onoff = false
shader_parameter/vertical_gradient = ExtResource("4_0b67m")
shader_parameter/color_gradient = ExtResource("3_dljhw")

[sub_resource type="AtlasTexture" id="AtlasTexture_umers"]
atlas = ExtResource("6_juew3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdw0w"]
atlas = ExtResource("6_juew3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhlbv"]
atlas = ExtResource("6_juew3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6au4o"]
atlas = ExtResource("6_juew3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_v8l3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umers")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdw0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhlbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6au4o")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vx302"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ttlwi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bj10"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56ucg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wi07r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ccf1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8e2f6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rwj1t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xan42"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8
script = ExtResource("1_jfk4f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TileMapLayer" parent="CanvasLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQABAAAAAAAAAAIAAQABAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAHAAMAAAAAAAcAAQABAAAAAAAAAAgAAQABAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAABAAAAAQABAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQABAAAAAAABAAYAAQAHAAMAAAABAAcAAQAAAAAAAAABAAgAAQABAAAAAAABAAkAAQABAAAAAAABAAoAAQAAAAAAAAABAAsAAQABAAAAAAACAAAAAQABAAAAAAACAAEAAQAAAAAAAAACAAMAAQABAAAAAAACAAQAAQAAAAAAAAACAAUAAQABAAAAAAACAAgAAQAAAAAAAAACAAkAAQABAAAAAAACAAoAAQABAAAAAAACAAsAAQABAAAAAAADAAAAAQABAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQABAAAAAAADAAUAAQABAAAAAAADAAYAAQAHAAMAAAADAAcAAQABAAAAAAADAAgAAQABAAAAAAADAAkAAQABAAAAAAADAAoAAQABAAAAAAADAAsAAQABAAAAAAAEAAAAAQABAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQABAAAAAAAEAAUAAQABAAAAAAAEAAYAAQAHAAMAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAoAAQABAAAAAAAEAAsAAQABAAAAAAAFAAAAAQABAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQABAAAAAAAFAAMAAQABAAAAAAAFAAQAAQABAAAAAAAFAAUAAQABAAAAAAAFAAYAAQAHAAMAAAAFAAsAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQABAAAAAAAGAAQAAQABAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAHAAMAAAAGAAoAAQABAAAAAAAGAAsAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQABAAAAAAAHAAIAAQABAAAAAAAHAAMAAQABAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAHAAMAAAAHAAcAAQABAAAAAAAHAAoAAQABAAAAAAAHAAsAAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQABAAAAAAAIAAIAAQABAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQABAAAAAAAIAAYAAQAHAAMAAAAIAAkAAQABAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQABAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQABAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAHAAMAAAAJAAgAAQABAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQABAAAAAAAJAAsAAQABAAAAAAAKAAAAAQABAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQABAAAAAAAKAAUAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQABAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQABAAAAAAALAAAAAQAAAAAAAAALAAEAAQABAAAAAAALAAIAAQABAAAAAAALAAMAAQABAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAHAAMAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQABAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQABAAAAAAAMAAIAAQABAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQABAAAAAAAMAAUAAQABAAAAAAAMAAYAAQAHAAMAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAANAAAAAQABAAAAAAANAAEAAQABAAAAAAANAAIAAQABAAAAAAANAAMAAQABAAAAAAANAAQAAQAAAAAAAAANAAUAAQABAAAAAAANAAYAAQAHAAMAAAANAAcAAQABAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQABAAAAAAANAAsAAQABAAAAAAAOAAAAAQABAAAAAAAOAAEAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAHAAMAAAAOAAcAAQABAAAAAAAOAAgAAQABAAAAAAAOAAkAAQABAAAAAAAOAAoAAQABAAAAAAAOAAsAAQABAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQABAAAAAAAPAAUAAQABAAAAAAAPAAYAAQAHAAMAAAAPAAcAAQABAAAAAAAPAAgAAQABAAAAAAAPAAkAAQABAAAAAAAPAAoAAQABAAAAAAAPAAsAAQAAAAAAAAAQAAAAAQABAAAAAAAQAAEAAQAAAAAAAAAQAAUAAQABAAAAAAAQAAYAAQAHAAMAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQABAAAAAAAQAAsAAQABAAAAAAARAAAAAQABAAAAAAARAAEAAQAAAAAAAAARAAUAAQABAAAAAAARAAYAAQAHAAMAAAARAAcAAQABAAAAAAARAAgAAQAAAAAAAAARAAkAAQABAAAAAAARAAoAAQAAAAAAAAARAAsAAQABAAAAAAASAAAAAQABAAAAAAASAAEAAQABAAAAAAASAAIAAQAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAQABAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQABAAAAAAASAAoAAQAAAAAAAAASAAsAAQABAAAAAAATAAAAAQABAAAAAAATAAEAAQABAAAAAAATAAIAAQABAAAAAAATAAMAAQAAAAAAAAATAAQAAQABAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQABAAAAAAATAAkAAQABAAAAAAATAAoAAQAAAAAAAAATAAsAAQAAAAAAAAASAAMAAQAAAAAAAAAOAAIAAQABAAAAAAAPAAIAAQAAAAAAAAAQAAIAAQAAAAAAAAARAAIAAQABAAAAAAAQAAQAAQABAAAAAAAPAAQAAQABAAAAAAAOAAQAAQABAAAAAAAOAAMAAQAAAAAAAAAPAAMAAQABAAAAAAAQAAMAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQABAAAAAAACAAcAAQABAAAAAAACAAYAAQAHAAMAAAD//wwAAQAIAAQAAAD//wsAAQAIAAQAAAD//woAAQAIAAQAAAD//wkAAQAIAAQAAAD//wUAAQAIAAQAAAD//wgAAQAIAAQAAAD//wcAAQAIAAQAAAD//wYAAQAIAAQAAAD//wQAAQAIAAQAAAD//wMAAQAIAAQAAAD//wIAAQAIAAQAAAD//wEAAQAIAAQAAAD//wAAAQAIAAQAAAD/////AQAIAAQAAAAAAP//AQAIAAQAAAABAP//AQAIAAQAAAACAP//AQAIAAQAAAADAP//AQAIAAQAAAAEAP//AQAIAAQAAAAFAP//AQAIAAQAAAAGAP//AQAIAAQAAAAHAP//AQAIAAQAAAAIAP//AQAIAAQAAAAJAP//AQAIAAQAAAAKAP//AQAIAAQAAAALAP//AQAIAAQAAAAMAP//AQAIAAQAAAANAP//AQAIAAQAAAAOAP//AQAIAAQAAAAPAP//AQAIAAQAAAAQAP//AQAIAAQAAAARAP//AQAIAAQAAAASAP//AQAIAAQAAAATAP//AQAIAAQAAAAUAP//AQAIAAQAAAAUAAAAAQAIAAQAAAAUAAEAAQAIAAQAAAAUAAIAAQAIAAQAAAAUAAMAAQAIAAQAAAAUAAQAAQAIAAQAAAAUAAUAAQAIAAQAAAAUAAYAAQAIAAQAAAAUAAcAAQAIAAQAAAAUAAgAAQAIAAQAAAAUAAkAAQAIAAQAAAAUAAoAAQAIAAQAAAAUAAsAAQAIAAQAAAAUAAwAAQAIAAQAAAATAAwAAQAIAAQAAAASAAwAAQAIAAQAAAARAAwAAQAIAAQAAAAQAAwAAQAIAAQAAAAPAAwAAQAIAAQAAAAOAAwAAQAIAAQAAAANAAwAAQAIAAQAAAAMAAwAAQAIAAQAAAALAAwAAQAIAAQAAAAKAAwAAQAIAAQAAAAJAAwAAQAIAAQAAAAIAAwAAQAIAAQAAAAHAAwAAQAIAAQAAAAGAAwAAQAIAAQAAAAFAAwAAQAIAAQAAAAEAAwAAQAIAAQAAAADAAwAAQAIAAQAAAACAAwAAQAIAAQAAAABAAwAAQAIAAQAAAAAAAwAAQAIAAQAAAAEAAkAAQAAAAAAAAAFAAcAAQABAAAAAAAFAAgAAQABAAAAAAAFAAkAAQABAAAAAAAFAAoAAQAAAAAAAAAGAAcAAQABAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQABAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQABAAAAAAAJAAcAAQABAAAAAAAKAAYAAQAHAAMAAAAKAAcAAQABAAAAAAACAAIAAQAAAAAAAAA=")
tile_set = ExtResource("1_wwh8w")

[node name="Environment" type="TileMapLayer" parent="CanvasLayer"]
tile_map_data = PackedByteArray("AAADAAYAAwAAAAAAAAADAAUABAAAAAAAAAADAAQAAgAEAAAAAAACAAQAAgABAAQAAAABAAQAAgABAAQAAAAAAAQAAgADAAEAAAAAAAMAAgADAAMAAAAAAAIAAgAEAAAAAAADAAcAAgADAAMAAAADAAgAAgADAAMAAAADAAkAAgADAAMAAAADAAoAAgAEAAEAAAACAAoAAgABAAQAAAABAAoAAgABAAQAAAAAAAoAAgABAAQAAAALAAgAAgACAAAAAAAHAAQAAgACAAAAAAARAAkAAgACAAAAAAAPAAEAAQACAAAAAAABAAIAAQACAAAAAAABAAMAAQACAAAAAAASAAYAAQAHAAMAAAAQAAMAAQAAAAUAAAAQAAQAAQAAAAYAAAARAAMAAQABAAUAAAARAAQAAQAAAAcAAAASAAMAAQADAAUAAAASAAQAAQACAAYAAAATAAMAAQACAAUAAAATAAQAAQADAAYAAAAQAAIAAQAAAAQAAAARAAIAAQADAAQAAAASAAIAAQABAAQAAAATAAIAAQACAAQAAAASAAUAAQAHAAMAAAA=")
tile_set = ExtResource("1_wwh8w")

[node name="Timmy" type="Node2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_gjqde")
position = Vector2(152, 104)
metadata/is_timmy = true

[node name="Shadow" type="Sprite2D" parent="CanvasLayer/Timmy"]
position = Vector2(0, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Timmy"]
material = SubResource("ShaderMaterial_nk4i7")
sprite_frames = ExtResource("5_30sbh")
animation = &"walk_left"
autoplay = "walk_left"
speed_scale = 0.5
offset = Vector2(0, -4)

[node name="Ghost" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(184, 104)
sprite_frames = SubResource("SpriteFrames_v8l3n")
animation = &"idle"
autoplay = "idle"
offset = Vector2(0, -4)

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -148.0
offset_right = 148.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_colors/font_color = Color(4.81307e-07, 0.751622, 0.760181, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 6
text = "The Little Avenger"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ContinueButton" type="Button" parent="Control/HBoxContainer"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(4.81307e-07, 0.751622, 0.760181, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_vx302")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ttlwi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1bj10")
text = "Continue"
flat = true

[node name="NewGameButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(4.81307e-07, 0.751622, 0.760181, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_vx302")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ttlwi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1bj10")
text = "New Game"
flat = true

[node name="OptionsButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(4.81307e-07, 0.751622, 0.760181, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_56ucg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wi07r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ccf1u")
text = "Options"
flat = true

[node name="CreditsButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(4.81307e-07, 0.751622, 0.760181, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_8e2f6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rwj1t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xan42")
text = "Credits"
flat = true

[connection signal="pressed" from="Control/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
